Fix hook for RealPermissions